# cvv

./: .gitignore  LICENSE  Makefile  PARALLEL_PERFORMANCE.md  QUICKSTART.md  README.md  STRUCTURE.md  cvv  offload.py  offload_v1.py  offload_v2.py  pfndispatchcopy  pyproject.toml  requirements.txt  setup.py  tmp.py
docs/agents/: GEMINI.md  TODO.md
docs/notes/: 1.md  asyncio_integration.org  perf_examination.md  perf_examination.org
docs/ref/: claude-prompt.org
examples/: directory_copy_test.py  example_usage.py  parallel_demo.py  progress_test.py  quick_demo.py  source_verification_test.py
ref/: log.txt  silverstack_csY_F3KJkX.txt  source_verification_requirements.txt
scripts/: dev-run.py
src/: __init__.py  cvv.py  pfndispatchcopy.py
src/cvv/: __init__.py  main.py
tests/: __init__.py  test_cvv.py  test_pfndispatchcopy.py
