[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cvv"
version = "1.0.0"
description = "Professional file copying tools for DIT workflows"
requires-python = ">=3.8"
dependencies = ["xxhash>=3.0.0"]

[project.scripts]
cvv = "cvv:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.basedpyright]
typeCheckingMode = "basic"
reportUnusedCallResult = false
