[project]
name = "cvv"
version = "0.0.1"
description = "File copy tool with one read, multiple writes. Copying in parallel, simultaneously."
readme = "README.md"
authors = [{ name = "thomjiji", email = "hxy449999@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["xxhash>=3.6.0", "aiofiles>=24.1.0"]

[project.scripts]
cvv = "cvv:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-asyncio>=0.23.0", "ruff>=0.14.2"]
